Closed
Bug 325558
Opened 20 years ago
Closed 18 years ago
Mouse cursor disappears if hidden by Flash against the side of the window
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
VERIFIED
FIXED
People
(Reporter: pjs38, Assigned: jaas)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
967 bytes,
patch
|
stuart.morgan+bugzilla
:
review+
vlad
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060201 Camino/1.0b2+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060201 Camino/1.0b2+
the pointer disappears, and not just within the browser, but outside of it...
Reproducible: Always
Comment 1•20 years ago
|
||
I see the same thing happen on the bottom bird, too, but as soon as I mouse out of the Flash animation there in the sidebar, the cursor comes back. Even if I leave the cursor there and cmd-tab into another app, the cursor comes back immediately.
cl
Does this happen in Firefox 1.5.0.1 or Safari?
In Fx, I can generally (but not always) get the cursor back if I mouse out of the window to the top or the left of the plugin, and alwsys get it back if I mouse out to the bottom or to the right, back over the text.
In Cm, the only sure way to get it back is to mouse out over the text; sometimes I can get it back by mousing out over the bottom of the plugin, but never via the top or the left sides.
Component: Accessibility → Plug-ins
Comment 6•20 years ago
|
||
Simon, are you thinking of https://bugzilla.mozilla.org/show_bug.cgi?id=260617#c12 ?
Comment 7•20 years ago
|
||
Yes. Not sure why bug 260617 was marked as WFM
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: The pointer disappears when I select the top bird on the menu (click on the graphic on the main page to get the pop up window that contains the menu) → Mouse cursor disappears if hidden by Flash against the side of the window
Whiteboard: dupme
Updated•20 years ago
|
Priority: -- → P2
Target Milestone: --- → Camino1.1
Blocks: 225397
Assignee: mikepinkerton → nobody
Severity: major → normal
QA Contact: plugins
Target Milestone: Camino1.1 → Camino2.0
Comment 8•20 years ago
|
||
I think this is one of the more serious bugs, and begs for a pre 2.0 designation.
Updated•20 years ago
|
Target Milestone: Camino2.0 → Camino1.1
Comment 9•19 years ago
|
||
*** Bug 359376 has been marked as a duplicate of this bug. ***
Target Milestone: Camino1.1 → Camino2.0
Comment 10•19 years ago
|
||
Works in FF2, not in trunk Firefox; -> Cocoa widget.
Assignee: nobody → joshmoz
Component: Plug-ins → Widget: Cocoa
Priority: P2 → --
Product: Camino → Core
QA Contact: plugins → cocoa
Target Milestone: Camino2.0 → ---
Version: unspecified → Trunk
Is this a particular symptom of bug 379413, or really a separate bug?
Per comment 10, this is a regression for Firefox.
Keywords: regression
Comment 12•18 years ago
|
||
I found this bug today while visiting the following page under OS X:
http://arthurmebius.com/
It's really annoying that the mouse pointer is hidden and you have to Cmd+Tab out of Firefox to get the mouse cursor back. This happens with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008030804 Minefield/3.0b5pre ID:2008030804.
Asking for blocking1.9 to hopefully get rid of this regression from switching to Cocoa.
Flags: blocking1.9?
Hardware: Macintosh → All
Comment 14•18 years ago
|
||
As additional note you also get back the cursor when leaving the website over the tabbar and Bookmarks Toolbar.
Flags: wanted1.9.0.x?
Flags: blocking1.9?
Flags: blocking1.9-
| Assignee | ||
Comment 15•18 years ago
|
||
Attachment #314423 -
Flags: review?(stuart.morgan)
Comment 16•18 years ago
|
||
Comment on attachment 314423 [details] [diff] [review]
fix v1.0
r=smorgan
Attachment #314423 -
Flags: review?(stuart.morgan) → review+
Attachment #314423 -
Flags: superreview?(vladimir)
Attachment #314423 -
Flags: superreview?(vladimir) → superreview+
| Assignee | ||
Comment 17•18 years ago
|
||
Comment on attachment 314423 [details] [diff] [review]
fix v1.0
This is a pretty safe bug fix for something that can be pretty frustrating for users. I recommend taking this for RC1.
Attachment #314423 -
Flags: approval1.9?
Comment 18•18 years ago
|
||
Comment on attachment 314423 [details] [diff] [review]
fix v1.0
a1.9=beltzner
Attachment #314423 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 19•18 years ago
|
||
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 20•18 years ago
|
||
Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9pre) Gecko Minefield/3.0pre ID:2008040922
Status: RESOLVED → VERIFIED
Updated•18 years ago
|
Flags: in-litmus?
Updated•17 years ago
|
Flags: wanted1.9.0.x+
Comment 21•17 years ago
|
||
This caused bug 496601, because plug-ins are NOT the only widgets we have around. I'm not sure why this was considered "safe" exactly... I'm also not sure why the patch is resetting the cursor, not just unhiding it.
How did carbon widgets handle this situation? They didn't have this bug, or bug 496601.
You need to log in
before you can comment on or make changes to this bug.
Description
•