Set a regular cursor when the mouse leaves a widget so that plugins don't hide the cursor and leave it hidden. b=325558 r=smorgan sr=vlad a=beltzner